multiples vistas y servicio compartido

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -159,3 +159,9 @@ tabla {
 .versiones a:hover {
     color: grey;
 }
+
+a {
+    color: white;
+    font-size: 20px; 
+    text-decoration: none;
+}
