--- a/views/pedido.html
+++ b/views/pedido.html
@@ -7,7 +7,6 @@
             <tr><th>Comprar</th><th>Pizzas</th><th>Tipo</th><th>Precio</th></tr>
         </thead>
     </table>
-    <a href="#/pedidos">Pedidos</a>
     <div class="calculo">
         <input class="filtro" type="text" data-ng-model="inputNombre"/>
         <span class="total">
@@ -17,7 +16,7 @@
 
     <table id="tabla">
         <tbody>
-        	<tr ng-repeat="pizza in pedido.datos.pedido | orderBy:'tipo' | filter:inputNombre">
+        	<tr ng-repeat="pizza in pedido.todos() | orderBy:'tipo' | filter:inputNombre">
         		<td>
                     <img ng-click="pedido.add(pizza)" src="images/plus.svg" class="svgicon"></img>   
                     <input ng-model="pizza.cantidad" type="number" min="0" max="15">
@@ -29,7 +28,10 @@
         	</tr>
         </tbody>
     </table>
-    <div>
+    <div class="row">
+        <a href="#/pedidos">Ver Pedidos</a>
+    </div>
+    <div class="row" ng-hide="pedido.vacio()">
         <button ng-click="pedido.pedir()">Pedir</button>
     </div>
 </div>
