--- a/views/pedido.html
+++ b/views/pedido.html
@@ -1,7 +1,7 @@
 <div class="titulo">
     <h1>Sal's Pizza con AngularJS</h1>
 </div>
-<div class="menu" ng-controller="PedidoPizzas as pedido">
+<div class="menu" ng-controller="controladorPedido as pedido">
     <table>
         <thead>
             <tr><th>Comprar</th><th>Pizzas</th><th>Tipo</th><th>Precio</th></tr>
