--- a/views/pedidos.html
+++ b/views/pedidos.html
@@ -1,7 +1,7 @@
 <div class="titulo">
     <h1>Sal's Pizza con AngularJS</h1>
 </div>
-<div class="menu" ng-controller="PedidosPizzas as pedidos">
+<div class="menu" ng-controller="controladorPedidos as pedidos">
     <table>
         <thead>
             <tr><th>Pedidos</th></tr>
